@@ -26,6 +26,7 @@ import edu.colorado.phet.common.piccolophet.nodes.FaceNode;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLImageButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
+import edu.colorado.phet.common.piccolophet.nodes.TextButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.fractionsintro.common.view.AbstractFractionsCanvas;
@@ -136,7 +137,7 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
         PictureLevel level = model.getPictureLevel( levelIndex );
 
         ContainerNode firstContainerNode = new ContainerNode( this, this ) {{
-            setOffset( 285, 200 );
+            setInitialPosition( 285, 200 );
         }};
         addChild( firstContainerNode );
         addChild( new ContainerFrontNode( firstContainerNode ) );
@@ -213,6 +214,31 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
         final PhetPText title = new PhetPText( "Level " + ( levelIndex + 1 ), new PhetFont( 32, true ) );
         title.setOffset( ( minScoreCellX - AbstractFractionsCanvas.INSET ) / 2 - title.getFullWidth() / 2, backButton.getFullBounds().getCenterY() - title.getFullHeight() / 2 );
         addChild( title );
+
+        addChild( new TextButtonNode( "Reset", AbstractFractionsCanvas.CONTROL_FONT, Color.orange ) {{
+            setOffset( title.getMaxX() + 130, title.getCenterY() - getFullBounds().getHeight() / 2 );
+            addActionListener( new ActionListener() {
+                public void actionPerformed( final ActionEvent e ) {
+                    reset();
+                }
+            } );
+        }} );
+    }
+
+    private void reset() {
+        //Eject everything from target containers
+        //Split everything
+        //Return everything home
+        for ( Target targetPair : targetPairs ) {
+            targetPair.cell.splitIt();
+        }
+        for ( ContainerNode containerNode : getContainerNodes() ) {
+            containerNode.splitAll();
+            containerNode.animateHome();
+        }
+        for ( RectangularPiece rectangularPiece : getPieceNodes() ) {
+            rectangularPiece.animateHome();
+        }
     }
 
     private List<RectangularPiece> getPieceNodes() {
@@ -303,7 +329,7 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
             }
         } ) );
         for ( ContainerNode containerNode : containerNodes ) {
-            if ( containerNode.getGlobalFullBounds().intersects( piece.getGlobalFullBounds() ) && !containerNode.isAtStartingLocation() ) {
+            if ( containerNode.getGlobalFullBounds().intersects( piece.getGlobalFullBounds() ) && !containerNode.isInToolbox() ) {
                 dropInto( piece, containerNode );
                 droppedInto = true;
                 break;
